# dsw-plugin-service-template

./: README.md
.github/workflows/: package.yml
plugin/: package-lock.json  package.json  vite.config.ts
plugin/src/: metadata.ts
service/: Makefile  pyproject.toml
service/src/plugin_service/: app.py
